# unreal-engine-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMIT_NOTES.md  LOCAL_SETUP.md  README.md  mcp.json  plan.md
.cursor-plugin/: plugin.json
.cursor/rules/: unreal-mcp-configure-blueprint.mdc
FlopperamUnrealMCP/: FlopperamUnrealMCP.uproject
FlopperamUnrealMCP/Config/: DefaultEngine.ini  DefaultGameplayTags.ini  DefaultInput.ini
FlopperamUnrealMCP/Source/: FlopperamUnrealMCP.Target.cs  FlopperamUnrealMCPEditor.Target.cs
Guides/: blueprint-graph-guide.md  prompt-examples.md  tools-reference.md
Plugins/UnrealMCP/: UnrealMCP.uplugin
Python/: unreal_mcp_server_advanced.py  unreal_mcp_server_blueprints.py
Python/helpers/: town_buildings.py  town_helpers.py
Python/server/: __init__.py  actor_tools.py  ai_navigation_tools.py  asset_import_tools.py  asset_management_tools.py  audio_tools.py  blueprint_tools.py  cesium_tools.py  core.py  (+18 more)
docs/: repository-map.md
kaguya/: Cargo.toml  README.md  kaguya.toml
kaguya/src/: config.rs  error.rs  i18n.rs  main.rs  platform.rs  state.rs
kaguya/src/health/: checker.rs  mod.rs  runner.rs
kaguya/src/services/: manager.rs  mcp_server.rs  mod.rs  scene_syncd.rs  service.rs  surrealdb.rs  unreal.rs
kaguya/src/tui/: app.rs  mod.rs  ui.rs
rules/: error-recovery.mdc  unreal-mcp-conventions.mdc
scripts/: cleanup-ports.py  generate_grand_art_castle.py  install-kaguya.ps1  launch-dev-stack.py  showpiece_phase0.py  stress_test_phase0.py  test_gameplay_framework.py  verify_procedural_e2e.py  visible_stress_test.py
(+353 files in other folders)
